# pullometer2024reconstruction

./: .gitmodules  README.md
main/: CMakeLists.txt  LSM6DSV16XSensor.cpp  LSM6DSV16XSensor.h  base64_encode.hpp  idf_component.yml  lsm6dsv16x_reg.c  lsm6dsv16x_reg.h  main.cpp
